<resources>
    <string name="app_name">SW\'s Choices</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menubar">menubar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_activity_welcome_page">WelcomePage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_registration">Registration</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <string name="login_subtitle_one">You are now good to go!</string>
    <string name="login_subtitle_two">Welcome to SW\'s Choices</string>

    <string name="facebook_app_id">616167095494495</string>
    <string name="fb_login_protocol_scheme">fb616167095494495</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_healthmgmt">Diet Planner</string>
    <string name="menu_help">Help</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_logout">Logout</string>
    <string name="main_daily_macronutrients_ratio_label">Macronutrients ratio</string>
    <string name="diet_label_calories">Calories</string>

    <!-- Labels in ActivityHealthMgmt -->
    <string name="main_objective">Objective</string>
    <string name="main_date">Date</string>
    <string name="main_daily_calories_label">Calories total</string>
    <string name="main_daily_protein_label">Protein</string>
    <string name="main_daily_carbs_label">Carbs</string>
    <string name="main_daily_fat_label">Fat</string>
    <string name="main_daily_button_add_food_label">Add food</string>
    <string name="main_daily_button_details_label">Details</string>


    <!-- Shared preferences keys and labels -->
    <!-- Preferences connected with objective -->
    <string name="sh_pref_user_diet_file_key" translatable="false">diet</string>

    <!-- General user preferences -->
    <string name="sh_pref_user_preferences_file_key" translatable="false">preferences</string>

    <!-- Units display formats -->
    <string name="unit_format_calories_int">%1$d kCal</string>
    <string name="unit_format_calories_per_100g">%1$.0f kCal / 100g</string>
    <string name="unit_format_percent">%1d %%</string>
    <string name="unit_format_weight_g">%1$d g</string>
    <string name="unit_format_weight_floating_g">%1$.1f g</string>
    <string name="unit_format_weight_per_weight_g">%1$d/%2$d g</string>
    <string name="unit_format_weight_g_per_100g">%1$d g / 100g</string>
    <string name="unit_format_weight_floating_g_per_100g">%1$.1f g / 100g</string>
    <string name="unit_format_calories">%1$.0f kCal</string>
    <string name="unit_format_calories_per_calories">%1$d/%2$d kCal</string>

    <!-- Nutrients names -->
    <string name="nutrient_energy">Energy</string>
    <string name="nutrient_protein">Protein</string>
    <string name="nutrient_carbohydrates">Carbs</string>
    <string name="nutrient_fat">Fat</string>
    <string name="nutrient_water">Water</string>
    <string name="nutrient_fiber">Fiber</string>
    <string name="nutrient_calcium">Calcium</string>
    <string name="nutrient_magnesium">Magnesium</string>
    <string name="nutrient_phosphorus">Phosphorus</string>
    <string name="nutrient_potassium">Potassium</string>
    <string name="nutrient_zinc">Zinc</string>
    <string name="nutrient_sodium">Sodium</string>
    <string name="nutrient_iron">Iron</string>

    <!-- Common types of meals to choose by the user in meals fragment -->
    <string name="meal_name_breakfast">Breakfast</string>
    <string name="meal_name_nd_breakfast">2nd breakfast</string>
    <string name="meal_name_lunch">Lunch</string>
    <string name="meal_name_dinner">Dinner</string>
    <string name="meal_name_supper">Supper</string>
    <string name="meal_name_snack">Snack</string>
    <string name="meal_name_brunch">Brunch</string>
    <string name="meal_name_cheat_meal">Cheat meal</string>
    <string name="meal_name_other">Other</string>

    <!-- Product types -->
    <string name="product_type_all">All</string>
    <string name="product_type_1">Type 1</string>
    <string name="product_type_2">Type 2</string>
    <string name="product_type_3">Type 3</string>
    <string name="product_type_4">Type 4</string>
    <string name="product_type_5">Type 5</string>
    <string name="product_type_6">Type 6</string>
    <string name="product_type_7">Type 7</string>
    <string name="product_type_8">Type 8</string>
    <string name="product_type_9">Type 9</string>
    <string name="product_type_10">Type 10</string>
    <string name="product_type_11">Type 11</string>
    <string name="product_type_12">Type 12</string>
    <string name="product_type_13">Type 13</string>
    <string name="product_type_14">Type 14</string>
    <string name="product_type_15">Type 15</string>
    <string name="product_type_16">Type 16</string>
    <string name="product_type_17">Type 17</string>

    <string name="time_format_moment_ago">Moment ago</string>
    <string name="time_format_minutes_ago">%1$d min ago</string>
    <string name="time_format_hour_ago">%1$d h ago</string>
    <string name="date_format_today">Today</string>

    <string name="food_type_product">Product</string>

    <!-- Add dialogs labels -->
    <string name="add_dialog_amount_label">Weight</string>
    <string name="add_dialog_button_save_label">Save</string>
    <string name="add_dialog_button_add_label">Add</string>
    <string name="add_dialog_button_delete_label">Delete</string>
    <string name="add_dialog_button_cancel_label">Cancel</string>
    <string name="add_dialog_title">Select weight</string>

    <!-- Labels in browse activity -->
    <string name="browse_activity_label">Browse products</string>
    <string name="browse_search_hint">Search</string>
    <string name="browse_menu_category_label">Category</string>
    <string name="browse_menu_nutrients_label">Nutrients values</string>
    <string name="browse_menu_nutrient_per_100g">%1$s per 100g</string>
    <string name="browse_menu_min_value_label">Minimum value</string>
    <string name="browse_menu_max_value_label">Maximum value</string>
    <string name="browse_details_nutrients_label">Nutrients values</string>
    <string name="browse_details_nutrient_label">Nutrient</string>
    <string name="browse_details_nutrients_per_100g_label">in 100g</string>

    <!-- Labels in diet activity -->
    <string name="diet_activity_label">Set your objective</string>
    <string name="diet_general_tab_label">General</string>
    <string name="diet_ratio_tab_label">Ratio</string>
    <string name="diet_meals_tab_label">Meals</string>
    <string name="diet_time_tab_label">Schedule</string>
    <string name="diet_next_button_label">Next</string>
    <string name="diet_back_button_label">Back</string>
    <string name="diet_save_button_label">Save</string>
    <string name="diet_error_daily_calories_not_full">Fill all calories among meals</string>
    <string name="diet_error_zero_calories_percent">Set daily calories percentage in every meal</string>
    <string name="diet_error_ratio_not_full">Fill all calories ratio</string>
    <string name="diet_error_no_custom_name">Give a name to all meals</string>

    <string name="diet_plan_saved_toast">Diet plan saved. Good luck!</string>

    <!-- Labels in diet general fragment -->
    <string name="fragment_general_label_meals">Meals per day</string>
    <string name="fragment_general_hint_calories">Calories limit</string>
    <string name="fragment_general_error_calories">Daily calories limit should be more than 500 kCal</string>

    <!-- Labels in diet ratio fragment -->
    <string name="fragment_ratio_weight_label">Total weight</string>
    <string name="fragment_ratio_label_protein">Protein</string>
    <string name="fragment_ratio_label_carbohydrates">Carbohydrates</string>
    <string name="fragment_ratio_label_fat">Fat</string>
    <string name="fragment_ratio_calories_format">%1$d/%2$d kCal</string>
    <string name="fragment_ratio_percent_sum_label">Overall sum</string>

    <!-- Labels in diet meals fragment -->
    <string name="fragment_meals_label_meal">Meal</string>
    <string name="fragment_meals_label_name">Name</string>
    <string name="fragment_meals_name_error">Meal name is required</string>

    <!-- Labels in diet time fragment -->
    <string name="fragment_time_label_time">Time</string>
    <!-- Labels in diet summary fragment -->
    <string name="fragment_summary_diet_plan_label">Diet plan</string>
    <string name="fragment_summary_meals_list_label">Meals</string>

    <string name="error_time_after">Set time minimum 15 minutes after previous meal</string>
    <string name="error_time_before">Set time minimum 15 minutes before next meal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fit_cycling">Cycling</string>
    <string name="fit_running">Running</string>

    <string-array name="program">
        <item>Get Fit</item>
        <item>Gain Muscle</item>
        <item>Lose Weight</item>
    </string-array>


</resources>
