<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_general"
        android:checkableBehavior="single">
        <!-- Dashboard -->
        <item
            android:id="@+id/menu_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard"
            android:checkable="true"/>

        <!-- HealthMgmt -->
        <item
            android:id="@+id/menu_healthmgmt"
            android:icon="@drawable/ic_dinner"
            android:title="@string/menu_healthmgmt"
            android:checkable="true"/>

        <!-- Nearby -->
        <item
            android:id="@+id/menu_nearby"
            android:icon="@drawable/ic_nearby"
            android:title="@string/menu_nearby" />

    </group>
    <group
        android:id="@+id/menu_group_settings">
        <!-- Settings -->
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />

        <!-- Help -->
        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />

        <!-- Feedback -->
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>